--- a/PasswordManager/templates/register.html
+++ b/PasswordManager/templates/register.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Manager Web App</title>
 
 </head>
-
 <body>
     <div class="container-fluid my-4 mx-2">
         {% block content %}
         <div class="index">
             <h1>Password Manager Web App</h1>
 
-            <form action="/login" method="post">
+            <form action="/update" method="post">
 
                 <div class="mb-3">
                     <label for="username" class="form-label visually-hidden">
@@ -39,18 +36,17 @@
                         <span class="input-group-text"><i class="fas fa-lock"></i></span>
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary mt-3">Login</button>
-                    </div>
-                    <div class="text-center">
-                       <button type="button" onclick="window.location.href='/register'" class="btn btn-primary mt-3">Register</button>
-                    </div>
+                      <div class="text-center">
+                    <button type="submit" class="btn btn-primary mt-3">Register</button>
+                </div>
+                </div>
 
                 <div class="msg text-center">
-                    <div class="text-center">{% if message %}
-                    <p>{{ message }}</p>
+
+
+                    {% if message %}
+                        <p>{{ message }}</p>
                     {% endif %}
-                        </div>
                 </div>
             </form>
 
