--- a/PasswordManager/templates/register.html
+++ b/PasswordManager/templates/register.html
@@ -37,7 +37,9 @@
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
                       <div class="text-center">
-                    <button type="submit" class="btn btn-primary mt-3">Register</button>
+                          <button type="button" onclick="window.location.href='/'" class="btn btn-primary mt-3">Login</button>
+                          <span class="px-2"></span>
+                          <button type="submit" class="btn btn-primary mt-3">Register</button>
                 </div>
                 </div>
 
